Navigations from the location bar disappear from the session navigation history with browser.navigation.requireUserInteraction=true
Categories
(Core :: DOM: Navigation, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | disabled |
| firefox77 | --- | unaffected |
| firefox78 | --- | unaffected |
| firefox79 | --- | disabled |
| firefox93 | --- | disabled |
| firefox94 | --- | disabled |
| firefox95 | --- | fixed |
| firefox132 | --- | verified |
People
(Reporter: robwu, Assigned: johannh)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(1 file)
STR:
- Open Firefox.
- Navigate to example.com
- Focus the location bar (e.g. with Ctrl-L or with clicking) and modify the URL, e.g. to example.com/1
- Use the back button.
Expected:
- I should be at the page from step 2.
Actual:
- I am at the first entry in the navigation history. When I use the forward button, I am at the page from step 3. The navigation from step 3 has unexpectedly disappeared.
The intent of bug 1515073 was to hide entries without explicit user interaction. I would say that an explicit navigation request by a user should count as an explicit user interaction.
Comment 1•6 years ago
|
||
Set release status flags based on info from the regressing bug 1515073
| Assignee | ||
Comment 2•6 years ago
|
||
Yup, thanks for filing the bug, we should fix that.
Comment 3•6 years ago
|
||
Just noticed this: I can navigate to a whole stream of URLs via the URL bar and only the current one appears in the session history when I right-click the back button. And when I hit back it skips over all the pages I meticulously hand-navigated to. Noticed this because I sometimes hand-tweak my complex bugzilla queries in the URL bar rather than go back to the form, but when I screw up and get a broken query hitting "back" takes me back to the form, not the most recent working version.
Navigating via bookmark is the same: not added to tab session history.
Beta (Fx79) is now working fine so I guess this is a Nightly only change?
Updated•6 years ago
|
| Assignee | ||
Comment 4•5 years ago
|
||
This should probably count any browser-chrome initiated load not happening in a new tab, such as bookmarks etc. 🤔
| Assignee | ||
Comment 5•4 years ago
|
||
This is a pretty cheap way of fixing this bug by saying nsDocShell::loadURI calls
done with a system principal will add user interaction to the current page. This takes
advantage of the fact that all UI code for loading URIs goes through this code path.
Note that during debugging I've found other cases where SH entries would be added with
a system principal, most notably when navigating to URL hashes/fragments (example.com#hash).
I'm not sure why this is happening but it doesn't go through nsDocShell::loadURI.
Comment 7•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Updated•4 years ago
|
Comment 8•1 year ago
|
||
This looks fixed on the Latest Nightly build 132.0a1, verified on platforms: Windows 10, macOS 12 and Ubuntu 22 with browser.navigation.requireUserInteraction=true.
Comment 9•1 year ago
|
||
Verified as fixed on Android, on the latest Nightly 132.0a1 from 05.09.2024 using Samsung Galaxy S23 Ultra (Android 14).
Description
•